--- a/Google Plus Layout/res/anim-land/slide_up_right.xml
+++ b/Google Plus Layout/res/anim-land/slide_up_right.xml
@@ -11,11 +11,17 @@
         android:duration="@integer/config_slide_time"
         android:fromAlpha="0.0"
         android:toAlpha="1.0" />
-<!--     <rotate -->
-<!--         android:duration="@integer/config_slide_time" -->
-<!--         android:fromDegrees="-25" -->
-<!--         android:pivotX="100%" -->
-<!--         android:pivotY="0" -->
-<!--         android:toDegrees="0" /> -->
-
 </set>
+<!-- Copyright (C) 2013 Ahmed Nammari -->
+
+<!-- Licensed under the Apache License, Version 2.0 (the "License"); -->
+<!-- you may not use this file except in compliance with the License. -->
+<!-- You may obtain a copy of the License at -->
+
+<!-- http://www.apache.org/licenses/LICENSE-2.0 -->
+
+<!-- Unless required by applicable law or agreed to in writing, software -->
+<!-- distributed under the License is distributed on an "AS IS" BASIS, -->
+<!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. -->
+<!-- See the License for the specific language governing permissions and -->
+<!-- limitations under the License. -->
