--- a/Google Plus Layout/res/layout-land/main.xml
+++ b/Google Plus Layout/res/layout-land/main.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2013 Ahmed Nammari -->
+
+<!-- Licensed under the Apache License, Version 2.0 (the "License"); -->
+<!-- you may not use this file except in compliance with the License. -->
+<!-- You may obtain a copy of the License at -->
+
+<!-- http://www.apache.org/licenses/LICENSE-2.0 -->
+
+<!-- Unless required by applicable law or agreed to in writing, software -->
+<!-- distributed under the License is distributed on an "AS IS" BASIS, -->
+<!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. -->
+<!-- See the License for the specific language governing permissions and -->
+<!-- limitations under the License. -->
+
 <com.nammari.googleplus.HorizontalGooglePlusLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,105 +28,6 @@
         <TextView
             android:id="@+id/textView1"
             style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
-            android:background="@color/item_alt"
-            android:text="@string/title" />
-
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/textViewCustomStyle"
-            
             android:background="@color/item"
             android:text="@string/title" />
 
@@ -122,6 +37,89 @@
             android:background="@color/item_alt"
             android:text="@string/title" />
 
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item"
+            android:text="@string/title" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/textViewCustomStyle"
+            android:background="@color/item_alt"
+            android:text="@string/title" />
     </LinearLayout>
 
 </com.nammari.googleplus.HorizontalGooglePlusLayout>
