--- a/Google Plus Layout/res/values-land/styles.xml
+++ b/Google Plus Layout/res/values-land/styles.xml
@@ -12,10 +12,11 @@
 <!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. -->
 <!-- See the License for the specific language governing permissions and -->
 <!-- limitations under the License. -->
-<resources>
 
-    <color name="item">#ED2676</color>
-    <color name="item_alt">#9D26ED</color>
-    <color name="background_color">#000000</color>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <style name="root_style">
+        <item name="android:orientation">horizontal</item>
+    </style>
 
 </resources>
